<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/no_agents_jobs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_active_agents"
            android:text="No active agents to send jobs"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"/>
        </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:id="@+id/agents_exist_jobs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_to_agent"
            android:textSize="20dp"
            android:text="@string/job_sendto"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/agents_jobs_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt_agents"
            android:layout_marginLeft="40dp"/>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/command_text"
            android:textSize="20dp"
            android:text="@string/send_job_command"
            android:layout_gravity="center_vertical"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:id="@+id/auto_jobs"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_job_periodic"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal" android:checkedButton="@+id/one_time_job_button"
            android:id="@+id/radio_group">

            <RadioButton android:id="@+id/periodic_job_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_job_periodic_yes" />

            <RadioButton android:id="@+id/one_time_job_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_job_periodic_no"
                android:layout_marginLeft="30dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp">
        <TextView
            android:id="@+id/time_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/send_job_time" />

        <EditText
            android:id="@+id/periodic_job_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:inputType="number"
            android:imeOptions="actionSend"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_clear"
            android:id="@+id/clear_job_button"
            android:layout_marginLeft="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_job"
            android:id="@+id/send_job_button"
            android:layout_marginLeft="20dp" />

    </LinearLayout>
</LinearLayout>